--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -1,7 +1,7 @@
 @import './contants.scss';
 
 .bg-primary {
-  background: #F8F7F1;
+  background: linear-gradient(90deg, rgba(248, 247, 241, 1) 36%, rgba(140, 151, 153, 1) 100%);
 }
 
 .innerWidth {
