--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -6,3 +6,22 @@
     scroll-behavior: smooth;
   }
   
+
+    /* For WebKit browsers (e.g., Chrome, Safari) */
+    ::-webkit-scrollbar {
+      width: 12px;
+    }
+  
+    ::-webkit-scrollbar-track {
+      background-color: #f1f1f1;
+    }
+  
+    ::-webkit-scrollbar-thumb {
+      background-color: #888;
+      border-radius: 6px;
+    }
+  
+    /* Optional: Add hover styles */
+    ::-webkit-scrollbar-thumb:hover {
+      background-color: #555;
+    }
