--- a/src/components/Hero/Hero.module.scss
+++ b/src/components/Hero/Hero.module.scss
@@ -1,6 +1,7 @@
 @import '../../styles/contants.scss';
 
 .wrapper {
+    
     overflow: hidden;
 
 
@@ -89,4 +90,35 @@
             color: orange;
         }
     }
+        /* Hero.module.scss */
+        .rotatedCertificate {
+            animation: rotateAnimation 3s linear infinite;
+        }
+    
+        @keyframes rotateAnimation {
+            0% {
+                transform: rotate(0deg);
+            }
+    
+            100% {
+                transform: rotate(360deg);
+            }
+        }
+                /* In your CSS or a separate stylesheet */
+                .meltText {
+                    animation: melt 1s ease-in-out 0.4s both;
+                    /* CSS animation */
+                }
+        
+                @keyframes melt {
+                    from {
+                        transform: scaleY(1);
+                    }
+        
+                    to {
+                        transform: scaleY(2);
+                        opacity: 1;
+                    }
+                }
+    
 }
